# Paper-replication

./: .gitignore  README.md
approx_manifold_prm/: CMakeLists.txt  package.xml  setup.py
approx_manifold_prm/config/: robot_params.yaml
approx_manifold_prm/launch/: build_approx_graph.launch  build_roadmap.launch  trajectory_planner.launch
approx_manifold_prm/scenes/: sim_scene_1.yaml  sim_scene_2.yaml
approx_manifold_prm/scripts/: approx_manifold_graph.py  benchmark.py  build_approx_graph.py  build_roadmap.py  lazy_prm.py  prm_star.py  run_planner.py  scene_loader.py  traditional_prm.py  trajectory_planner_node.py
approx_manifold_prm/src/approx_manifold_prm/: __init__.py
approx_manifold_prm/srv/: PlanTrajectory.srv
approx_manifold_prm/tests/: test_approx_manifold_graph.py  test_benchmark.py  test_scene_loader.py  test_trajectory_planner_node.py
